# AGPred

./: .gitignore  CMakeLists.txt  CMakeSettings.json  library.cpp  main.cpp  main_backtest.cpp  main_dl.cpp  main_pred.cpp  main_process.cpp  main_sys.cpp  main_wss.cpp  readme.md  test_kml.cu
adapters/: polygon_io.cpp  polygon_io.h
algos/: algo_common.h  long_low.cpp  long_low.h  ma3_ema9.cpp  ma3_ema9.h
core/: account.h  account_adapter.h  account_controller.cpp  account_controller.h  adapter.h  core.cpp  core.h  data_adapter.h  data_controller.cpp  data_controller.h  position.h  ring_buffers.h  strategy.cpp  strategy.h
sim/: downloader.cpp  downloader.h  simulated_account_adapter.h  simulator.h
src/: agen_xt_api.cpp  common.cpp  common.h  consolidate.cpp  consolidate.h  data_generator.cpp  data_generator.h  defs.h  preprocess.cpp  preprocess.h  util.cpp  util.h  wsclient.cpp  wsclient.h  wsclient_ssl.cpp  wsclient_ssl.h
